# self-rust-tokenize

./: Cargo.toml  LICENSE  README.md
.github/workflows/: crates.yml  rust.yml
self-rust-tokenize/: Cargo.toml  README.md  lib.rs
self-rust-tokenize-derive/: Cargo.toml  README.md  lib.rs  macro.rs
self-rust-tokenize-derive/src/: lib.rs
self-rust-tokenize/src/: lib.rs
self-rust-tokenize/tests/: custom_types.rs  inbuilt_types.rs
