[package]
name = "self-rust-tokenize"
description = "Turns instances of Rust structures into a token stream that creates the instance"
authors = [ "Ben <kaleidawave@gmail.com>" ]
version = "0.0.0"
license = "MIT"
edition = "2018"
repository = "https://github.com/kaleidawave/self-rust-tokenize"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
self-rust-tokenize-derive = { version = "0.0.0", path = "../self-rust-tokenize-derive" }
proc-macro2 = "1.0"
quote = "1.0.10"
