[package]
name = "self-rust-tokenize"
description = "Turns instances of Rust structures into a token stream that creates the instance"
authors = ["Ben <kaleidawave@gmail.com>"]
version = "0.4.0"
license = "MIT"
edition = "2018"
repository = "https://github.com/kaleidawave/self-rust-tokenize"
categories = ["rust-patterns"]
keywords = ["derive", "meta", "meta-programming"]

# For array thingy
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "lib.rs"

[dependencies]
self-rust-tokenize-derive = { version = "0.4.1", path = "../self-rust-tokenize-derive" }
proc-macro2 = "1.0"
quote = "1.0"
smallvec = { version = "1", optional = true }

[features]
smallvec = ["dep:smallvec"]
references = []
